# containers

./: .conform.yaml  .dockerignore  .env.example  .env.init.example  .env.secrets.example  .gitignore  .gitlab-ci-dind.yml  .gitlab-ci.yml  .hadolint.yaml  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  .pymarkdown.json  .rumdl.toml  .rustfmt.toml  .shellcheckrc  .trivyignore  .vale.ini  .yamllint.yml  AGENTS.md  ANALYSIS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  README.md  SECURITY.md  VERSION  _typos.toml  biome.json  cliff.toml  clippy.toml  cspell.json  deny.toml  dprint.json  justfile  (+5 more)
.cargo/: config.toml
.claude/: settings.local.json
.cspell/: project-words.txt
.devcontainer/: devcontainer.json  docker-compose.yml  rebuild.sh  setup-git-ssh.sh
.githooks/: README.md  pre-commit  pre-push
.zed/: settings.json
base-images/: README.md
crates/containers-common/: Cargo.toml  README.md
crates/containers-common/src/: config.rs  generate.rs  lib.rs
crates/containers-common/src/feature/: mod.rs  registry.rs  resolve.rs  validate.rs
crates/containers-common/src/template/: context.rs  funcmap.rs  mod.rs  renderer.rs  tests.rs
crates/containers-common/src/template/sources/: devcontainer.json.j2  docker-compose.yml.j2  env-example.j2  env.j2  igor.yml.j2
crates/containers-common/src/tooldb/: dependency.rs  install_method.rs  mod.rs  tool.rs  version.rs
crates/containers-common/src/version/: constraint.rs  error.rs  mod.rs  parse.rs  style.rs  tagged.rs
crates/containers-common/testdata/: agents.igor.yml  fullstack.igor.yml  minimal.igor.yml  services.igor.yml
crates/containers-common/testdata/golden/fullstack/: devcontainer.json.tmpl.golden  docker-compose.yml.tmpl.golden  env-example.tmpl.golden  env.tmpl.golden  igor.yml.tmpl.golden
crates/containers-common/testdata/golden/minimal/: devcontainer.json.tmpl.golden  docker-compose.yml.tmpl.golden  env-example.tmpl.golden
crates/containers-common/tests/: version_constraint.rs  version_intersect.rs  version_parse.rs  version_styles.rs  version_tagged.rs
crates/luggage/: Cargo.toml  README.md
crates/luggage/src/: catalog.rs  catalog_gen.rs  error.rs  lib.rs  platform.rs  policy.rs  reconcile.rs  resolver.rs
crates/luggage/src/installer/: download.rs  idempotency.rs  logging.rs  mod.rs  post_install.rs  rustup_target.rs  syspackages.rs  template.rs  user.rs  validate.rs
crates/luggage/src/installer/methods/: mod.rs  script_installer.rs
crates/luggage/src/installer/verify/: mod.rs  sha.rs  tier3.rs
crates/luggage/testdata/catalog/tools/bash/: index.json
crates/luggage/testdata/catalog/tools/rust/: index.json
crates/luggage/testdata/catalog/tools/rust/versions/: 1.84.0.json  1.84.1.json  1.95.0.json  1.96.0.json  1.97.0.json  1.97.1.json
crates/luggage/testdata/policy_catalog/tools/tool_abandoned/: index.json
crates/luggage/testdata/policy_catalog/tools/tool_abandoned/versions/: 1.0.0.json
crates/luggage/testdata/policy_catalog/tools/tool_active/: index.json
crates/luggage/testdata/policy_catalog/tools/tool_active/versions/: 1.0.0.json
crates/luggage/testdata/policy_catalog/tools/tool_below_min/: index.json
crates/luggage/testdata/policy_catalog/tools/tool_below_min/versions/: 1.0.0.json
crates/luggage/testdata/policy_catalog/tools/tool_dormant/: index.json
crates/luggage/testdata/policy_catalog/tools/tool_dormant/versions/: 1.0.0.json
crates/luggage/testdata/policy_catalog/tools/tool_maintained/: index.json
crates/luggage/testdata/policy_catalog/tools/tool_maintained/versions/: 1.0.0.json
crates/luggage/testdata/policy_catalog/tools/tool_slow/: index.json
crates/luggage/testdata/policy_catalog/tools/tool_slow/versions/: 1.0.0.json
crates/luggage/testdata/policy_catalog/tools/tool_stale/: index.json
crates/luggage/testdata/policy_catalog/tools/tool_stale/versions/: 1.0.0.json
crates/luggage/testdata/policy_catalog/tools/tool_very_active/: index.json
crates/luggage/testdata/policy_catalog/tools/tool_very_active/versions/: 1.0.0.json
crates/luggage/tests/: catalog_component_completeness.rs  cli.rs  install_rust.rs  policy_tests.rs
crates/record-evidence/: Cargo.toml
crates/record-evidence/src/: lib.rs  main.rs
crates/record-evidence/tests/: cli.rs
crates/stibbons/: Cargo.toml  build.rs  build_version.rs
crates/stibbons/src/: main.rs  render.rs
crates/stibbons/src/agent/: commands.rs  context.rs  db.rs  docker.rs  mod.rs  test_support.rs  worktree.rs
crates/stibbons/src/agent/scripts/: agent-entrypoint.sh  agent-init.sh  agent-start.sh
crates/stibbons/src/commands/: features.rs  mod.rs  status.rs  version.rs
crates/stibbons/src/labels/: backend.rs  exec.rs  metadata.rs  mod.rs  plan.rs  platform.rs
crates/stibbons/src/services/: commands.rs  mod.rs
crates/stibbons/src/services/commands/: tests.rs
crates/stibbons/src/wizard/: mod.rs  review.rs  steps.rs
crates/stibbons/tests/: add_remove_integration.rs  agent_integration.rs  build_version.rs  init_integration.rs  labels_integration.rs  status_integration.rs  update_integration.rs  version_stamp.rs  worktree_integration.rs
crates/stibbons/tests/common/: mod.rs
docs/: CHANGELOG-FORMAT.md  README.md  architecture-review.md  automated-patch-releases.md  build-metrics.md  cache-strategy.md  changelog-formatting.md  checksum-verification-guide.md  checksum-verification-inventory.md  checksum-verification.md  ci-push-authentication.md  comment-style-guide.md  emergency-rollback.md  environment-variables.md  feature-dependencies.md  github-ci-authentication.md  healthcheck.md  migration-guide.md  mojo-deprecation-notice.md  partial-version-resolution-analysis.md  production-deployment.md  releasing.md  scheduled-version-checks.md  security-and-init-system.md  security-hardening.md  security-scan-quick-reference.md  testing-framework.md  troubleshooting.md  version-compatibility.md  version-tracking.md
host/: init-env.sh
lib/: checksums.json
schemas/: build-args.schema.json  (+1 more)
tests/: run_all.sh  (+8 more)
(+1083 files in other folders)
