[package]
name = "luggage"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Catalog loader and version/platform resolver for the containers build system"
publish = false

[lints]
workspace = true

[dependencies]
containers-common = { workspace = true }
clap = { workspace = true, features = ["env"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
shell-words = "1"
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ureq = { version = "2", default-features = false, features = ["tls"] }

[dev-dependencies]
tempfile = { workspace = true }
