[package]
name = "record-evidence"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Wrapper that combines a `luggage install --json-report` with CI metadata into a containers-db TestEntry row"
publish = false

[[bin]]
name = "record-evidence"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
containers-common = { workspace = true }
luggage = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
